--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.xerial:sqlite-jdbc:3.7.2'
 }
 println System.getProperty("java.home")
