--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.3'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.3'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'org.xerial:sqlite-jdbc:3.7.2'
 }
 println System.getProperty("java.home")
