--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,13 @@ apply plugin: 'java'
 apply plugin:'application'
 apply plugin: 'eclipse'
 
-sourceCompatibility = 1.7
 version = '1.0'
 mainClassName = "ninefoo.application.Application"
 jar {
     manifest {
         attributes 'Implementation-Title': 'ninefoo',
                 'Implementation-Version': 1.0,
-                'Main-Class': 'ninefoo.application.Application'
+                'Main-Class': mainClassName
     }
 }
 sourceSets {
@@ -26,4 +25,4 @@ dependencies {
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
-println System.getProperty("java.home")
+println "System's JAVA_HOME: " + System.getProperty("java.home")
