--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.5.4'
 	compile 'com.fasterxml.jackson.core:jackson-core:2.5.4'
 	compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.4'
+	compile 'net.sourceforge.jdatepicker:jdatepicker:1.3.2'
 	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
